--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,7 +26,8 @@
             "styles": [
               "src/custom-theme.scss",
               "node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/apexcharts/dist/apexcharts.min.js"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
