--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,14 @@
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "angular-fusioncharts": "^3.1.0",
+    "angularjs-fusioncharts": "^5.0.3",
+    "apexcharts": "^3.26.3",
     "bootstrap": "^5.0.1",
+    "fusioncharts": "^3.17.0",
     "jquery": "^3.6.0",
     "ng": "0.0.0",
+    "ng-apexcharts": "^1.5.10",
     "popper": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
